--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "BAF-Website-v50": {
+    "BAF-Website": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/BAF-Website-v50",
+            "outputPath": "dist/BAF-Website",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -70,18 +70,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "BAF-Website-v50:build"
+            "browserTarget": "BAF-Website:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "BAF-Website-v50:build:production"
+              "browserTarget": "BAF-Website:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "BAF-Website-v50:build"
+            "browserTarget": "BAF-Website:build"
           }
         },
         "test": {
@@ -123,16 +123,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "BAF-Website-v50:serve"
+            "devServerTarget": "BAF-Website:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "BAF-Website-v50:serve:production"
+              "devServerTarget": "BAF-Website:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "BAF-Website-v50"
+  "defaultProject": "BAF-Website"
 }
