--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,22 @@
             "scripts": []
           },
           "configurations": {
+            "development": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
+            },
+            "test": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.test.ts"
+                }
+              ]
+            },
             "production": {
               "fileReplacements": [
                 {
@@ -73,6 +89,12 @@
             "browserTarget": "BAF-Website:build"
           },
           "configurations": {
+            "development": {
+              "browserTarget": "BAF-Website:build:development"
+            },
+            "test": {
+              "browserTarget": "BAF-Website:build:test"
+            },
             "production": {
               "browserTarget": "BAF-Website:build:production"
             }
