--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,11 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@homepage/*":["src/app/modules/homepage/*"],
+      "@shared/*":["src/app/modules/shared/*"]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
