--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "paths": {
       "@homepage/*":["./src/app/modules/homepage/*"],
       "@collections/*":["./src/app/modules/collections/*"],
-      "@shared/*":["./src/app/modules/shared/*"]
+      "@shared/*":["./src/app/modules/shared/*"],
+      "@stories/*":["./src/app/modules/stories/*"]
     }
   },
   "angularCompilerOptions": {
