about and contact pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,9 @@
       "@homepage/*":["./src/app/modules/homepage/*"],
       "@collections/*":["./src/app/modules/collections/*"],
       "@shared/*":["./src/app/modules/shared/*"],
-      "@stories/*":["./src/app/modules/stories/*"]
+      "@stories/*":["./src/app/modules/stories/*"],
+      "@about/*":["./src/app/modules/about/*"],
+      "@contact/*":["./src/app/modules/contact/*"]
     }
   },
   "angularCompilerOptions": {
