--- a/angular.json
+++ b/angular.json
@@ -91,7 +91,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "BAF-Website:build"
+            "browserTarget": "BAF-Website:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "development": {
