--- a/angular.json
+++ b/angular.json
@@ -35,10 +35,12 @@
               "node_modules/@fortawesome/fontawesome-pro/css/all.min.css",
               "src/assets/fonts/avenir/stylesheet.css",
               "src/assets/fonts/signifier/stylesheet.css",
+              "node_modules/sweetalert2/dist/sweetalert2.min.css",
               "src/assets/stylesheets/styles.scss"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/sweetalert2/dist/sweetalert2.min.js"
             ]
           },
           "configurations": {
@@ -129,10 +131,12 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/assets/fonts/avenir/stylesheet.css",
               "src/assets/fonts/signifier/stylesheet.css",
-              "src/assets/stylesheets/styles.scss"
+              "src/assets/stylesheets/styles.scss",
+              "node_modules/sweetalert2/dist/sweetalert2.min.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/sweetalert2/dist/sweetalert2.min.js"
             ]
           }
         },
