--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "carousel": "0.0.3",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^11.0.18",
     "tslib": "^1.10.0",
     "zone.js": "~0.11.4"
   },
